# imber-engine

./: .clang-format  .gitignore  CMakeLists.txt  GenerateProject.bat  GenerateProjectFiles.bat  README.md  premake5.lua
Engine/Source/: main.cpp
Engine/Source/Core/: CoreDefinitions.h
Engine/Source/Core/Private/Logging/: LogSubsystem.cpp  LogVerbosity.cpp  Logger.cpp
Engine/Source/Core/Private/Logging/Sinks/: ConsoleLogSink.cpp  LogSink.cpp
Engine/Source/Core/Public/Logging/: LogMacros.h  LogSubsystem.h  LogVerbosity.h  Logger.h
Engine/Source/Core/Public/Logging/Sinks/: ConsoleLogSink.h  LogSink.h
Engine/Source/Core/Public/Types/: BaseTypes.h
Samples/Playground/: CMakeLists.txt
Samples/Playground/Source/: main.cpp
Source/: CMakeLists.txt
Source/Engine/: CMakeLists.txt
Source/Engine/Core/Private/: Core.cpp
Source/Engine/Core/Public/: Core.h  EngineDefinitions.gen.h  EngineExport.gen.h
Templates/: CMakeLists.txt
Templates/Playground/: CMakeLists.txt
Templates/Playground/Source/: main.cpp
Tools/CMake/: ImberExport.cmake
Tools/CMake/Templates/: EngineDefinitions.tmpl
