cmake_minimum_required(VERSION 3.28)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)

project(Imber
    VERSION 0.0.1
    LANGUAGES CXX
)

# suppress gen of CHECK_CLEAR target
set(CMAKE_SUPPRESS_REGENERATION TRUE)
# link time optimization
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set(CMAKE_CONFIGURATION_TYPES "Debug;Release;RelWithDebInfo" CACHE STRING "" FORCE)

set(IMBER_ROOT_DIR ${CMAKE_CURRENT_LIST_DIR})
set(IMBER_SOURCE_DIR ${IMBER_ROOT_DIR}/Source)
set(IMBER_BINARY_DIR ${CMAKE_BINARY_DIR}/Binaries/${CMAKE_SYSTEM_NAME})
set(IMBER_TOOLS_DIR ${CMAKE_CURRENT_LIST_DIR}/Tools)
set(IMBER_THIRD_PARTY_DIR ${CMAKE_CURRENT_LIST_DIR}/ThirdParty)
set(IMBER_TEMPLATES_DIR ${CMAKE_CURRENT_LIST_DIR}/Templates)

foreach(IMBER_CONFIG IN LISTS CMAKE_CONFIGURATION_TYPES)
    string(TOUPPER ${IMBER_CONFIG} IMBER_UPPER_CONFIG)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${IMBER_UPPER_CONFIG} ${IMBER_BINARY_DIR}/${IMBER_CONFIG})
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${IMBER_UPPER_CONFIG} ${IMBER_BINARY_DIR}/${IMBER_CONFIG})
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${IMBER_UPPER_CONFIG} ${IMBER_BINARY_DIR}/${IMBER_CONFIG})
    set(CMAKE_PDB_OUTPUT_DIRECTORY_${IMBER_UPPER_CONFIG} ${IMBER_BINARY_DIR}/${IMBER_CONFIG})
endforeach()

# MSVC configuration
if (MSVC)
    # TODO: refactor
    # set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>") # or add compile parameter -MTd
    # set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:RelWithDebInfo>:Release>") # or add compile parameter -MT

    add_compile_options("/MP") # build with multiple processes
endif()

# Visual Studio configuration
if (CMAKE_GENERATOR STREQUAL "Visual Studio 17 2022")
    # TODO: refactor
    # set(CMAKE_VS_EXCLUDE_INTERNAL_FILES OFF)
    # set(CMAKE_VS_INCLUDE_INSTALL_TO_DEFAULT_BUILD 1)
    # set(CMAKE_VS_INCLUDE_EXTERNAL_FILES ON)

    set(VS_DEBUGGER_WORKING_DIRECTORY ${IMBER_BINARY_DIR})
endif()

add_subdirectory(${IMBER_SOURCE_DIR})
add_subdirectory(${IMBER_TEMPLATES_DIR})
# add_subdirectory(${IMBER_TOOLS_DIR})
# add_subdirectory(${IMBER_THIRD_PARTY_DIR})